# yolo-trap-py

./: .gitignore  config.ini  disk_mounted.py  disk_unmounted.py  imx_main.py  install-hq.sh  install.sh  pyproject.toml  settings.db  start.sh  yolo_main.py
bluetooth/: __init__.py  bluetooth_control.py  messages.py
camera_process/: __init__.py  camera.py  camera_ahq.py  camera_flow.py  camera_picam3.py  detect_flow.py  detections_cache.py  frame_publisher.py  preview_flow.py  process.py
control/: __init__.py  bluetooth_messages.py  bluetooth_pb2.py  control_service.py  platform.py  state_controller.py  uuids.py
control_process/: __init__.py  bluetooth_controller.py  bluetooth_messages.py  bluetooth_pb2.py  process.py  session_manager.py  sessions_cache.py  state_controller.py  trap_protocol_pb2.py  trap_protocol_server.py  uuids.py
flow/: __init__.py  detect_flow.py  imx500_flow.py  oak1-flow.py  stream_flow.py  yolo_native_flow.py  yolo_preview_flow.py
installation/: yolotrap.service
installation-files/: cpmount  cpumount  usbstick-handler@.service  yolotrap.service
ipc/: __init__.py  active_flow.py  control_messages.py  ipc.py  ipc_pb2.py  session_messages.py
network/: network_manager.py
session/: __init__.py  async_process_queue.py  detection_metadata.py  detection_session_client.py  image_metadata.py  ipc.py  session.py  session_client.py  session_ipc.py  session_manager.py  session_messages.py  session_pb2.py  session_service.py  stream_session_client.py
settings/: network_manager.py  settings.py  settings_database.py  settings_manager.py
(+65 files in other folders)
